lager kategorier for other

--- a/notebooks/LLM101_v1.ipynb
+++ b/notebooks/LLM101_v1.ipynb
@@ -11,9 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Spørsmål\n",
+    "### Spørsmål\n",
     "\n",
     "- Hvordan gjør vi det med nøkler? Per nå leser denne fortsatt fra .env-filen da jeg ikke ville pushe de til github.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tanker\n",
+    "\n",
+    "- Gi mer info i prompt om situasjonen rundt spørreundersøkelsen og hva det har blitt spurt om. Spesielt i situasjonen hvor vi øsnker å oppsummere den generelle viben av feedbacken i hver kategori. Var folk fornøyde? Ønsker de tiltak for forbedring?"
    ]
   },
   {
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,16 +143,16 @@
     "\n",
     "    fb: str = Field(description=\"Return just the feedback verbatim.\")\n",
     "    categories: Literal[\n",
-    "        \"Technology\",\n",
-    "        \"IT support\",\n",
-    "        \"Network\",\n",
-    "        \"Other\",\n",
+    "        \"Cyber security\",\n",
+    "        \"IT Support\",\n",
+    "        \"IT Systems\",\n",
+    "        'Other'\n",
     "    ] = Field(\n",
-    "        description=\"Categorize the feedback into the most fitting category. If the categories provided are not a perfect fit, default to 'Other'.\"\n",
+    "        description=\"Categorize the feedback into the most fitting category. If the categories provided are not a perfect fit, default to 'Other'. You should always choose 'Other' if you belive there exist a category which is a better fit for the feedback than the pedetermined categories in the list.\"\n",
     "    )\n",
-    "    if_other: str = Field(\n",
-    "        description=\"If you chose to categorize the feedback as 'Other', return an explanation as to why and what category you think would be the best fit for the feedback.\"\n",
-    "    )\n",
+    "    #if_other: str = Field(\n",
+    "        #description=\"If you chose to categorize the feedback as 'Other', return an explanation as to why and what category you think would be the best fit for the feedback.\"\n",
+    "    #)\n",
     "\n",
     "\n",
     "class Categorize_bound(BaseModel):\n",
@@ -183,7 +192,7 @@
     "\n",
     "    # Thoughts: Forklar tankegangen din.\n",
     "    fb: str = Field(description=\"Return just the feedback verbatim.\")\n",
-    "    cat_1: str = Field(description=\"The best fitting general category\")\n",
+    "    cat_1: str = Field(description=\"The best fitting general category.\")\n",
     "    rating: Optional[int] = Field(\n",
     "        description=\"Your certainty of the corectness of the best category on a scale from 1-10\"\n",
     "    )\n",
@@ -222,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,11 +255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 2"
+    "n = 10"
    ]
   },
   {
@@ -262,50 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "-----Feedback-----\n",
-      " Although the system is old and its documentation remains thorough, the outdated interface sometimes creates subtle moments of confusion and occasional frustration during peak hours.\n",
-      "\n",
-      "-----Category-----\n",
-      " 4O: Quality of technology\n",
-      " 3O: Quality of technology\n",
-      "\n",
-      "-----Rating of certainty-----\n",
-      " 4O: 8\n",
-      " 3O: 9\n",
-      "\n",
-      "-----Reason-----\n",
-      " 4O: The feedback highlights issues with the outdated interface of the system, which directly relates to the quality of technology.\n",
-      " 3O: The feedback highlights issues related to the system's outdated user interface causing confusion and frustration, which directly points to the overall quality and usability of the technology.\n",
-      "\n",
-      "\n",
-      "\n",
-      "-----Feedback-----\n",
-      " The step-by-step training guides for warehouse operations are mostly clear and effective; I often feel confident and even joyful when things click, although at times the dry tone leaves me wishing for more engaging details..\n",
-      "\n",
-      "-----Category-----\n",
-      " 4O: IT training\n",
-      " 3O: IT training\n",
-      "\n",
-      "-----Rating of certainty-----\n",
-      " 4O: 8\n",
-      " 3O: 9\n",
-      "\n",
-      "-----Reason-----\n",
-      " 4O: The feedback specifically mentions training guides and the effectiveness of training, making 'IT training' the most fitting category.\n",
-      " 3O: The feedback specifically discusses the training guides, noting their clarity and effectiveness, which directly aligns with IT training, despite the note about tone.\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Bound categorization\n",
     "\n",
@@ -338,42 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "-----Feedback-----\n",
-      " Although the system is old and its documentation remains thorough, the outdated interface sometimes creates subtle moments of confusion and occasional frustration during peak hours..\n",
-      "\n",
-      "-----Category 1-----\n",
-      " 4O: User Experience\n",
-      " 3O: User Experience / Usability\n",
-      "\n",
-      "-----Rating of certainty-----\n",
-      " 4O: 8\n",
-      " 3O: 9\n",
-      "\n",
-      "\n",
-      "\n",
-      "-----Feedback-----\n",
-      " The step-by-step training guides for warehouse operations are mostly clear and effective; I often feel confident and even joyful when things click, although at times the dry tone leaves me wishing for more engaging details..\n",
-      "\n",
-      "-----Category 1-----\n",
-      " 4O: Training and Documentation\n",
-      " 3O: Training & Documentation\n",
-      "\n",
-      "-----Rating of certainty-----\n",
-      " 4O: 8\n",
-      " 3O: 9\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "responses_3O = {}\n",
@@ -402,40 +337,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "-----Feedback-----\n",
-      " Although the system is old and its documentation remains thorough, the outdated interface sometimes creates subtle moments of confusion and occasional frustration during peak hours.\n",
-      "\n",
-      "-----Category-----\n",
-      " 4O: Technology\n",
-      " 3O: Technology\n",
-      "\n",
-      "-----If other-----\n",
-      " 4O: \n",
-      " 3O: \n",
-      "\n",
-      "\n",
-      "-----Feedback-----\n",
-      " The step-by-step training guides for warehouse operations are mostly clear and effective; I often feel confident and even joyful when things click, although at times the dry tone leaves me wishing for more engaging details.\n",
-      "\n",
-      "-----Category-----\n",
-      " 4O: Other\n",
-      " 3O: IT support\n",
-      "\n",
-      "-----If other-----\n",
-      " 4O: This feedback pertains to training materials rather than a specific IT service, making it difficult to categorize under Technology, IT support, or Network. The best fit would be 'Training and Development'.\n",
-      " 3O: \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "responses_3O = {}\n",
@@ -452,6 +356,106 @@
     "        f\"-----If other-----\\n 4O: {responses_4O[i].if_other}\\n 3O: {responses_3O[i].if_other}\\n\"\n",
     "    )\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Din tur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                            Feedback    Category\n",
+      "0  Although the system is old and its documentati...  IT systems\n",
+      "1  The step-by-step training guides for warehouse...       Other\n",
+      "2  Training sessions on inventory management soft...       Other\n",
+      "3  The VPN connection is unreliable and slows dow...  IT systems\n",
+      "4  Whenever I need help, I receive a prompt and f...  IT Support\n",
+      "5  The email filtering system does a great job ov...  IT systems\n",
+      "6  The HR software training felt rushed and the s...       Other\n",
+      "7  The IT onboarding training was comprehensive a...  IT systems\n",
+      "8  The sales analytics platform is overly complex...  IT systems\n",
+      "9  Support has been consistently helpful with pro...  IT Support\n"
+     ]
+    }
+   ],
+   "source": [
+    "## returnerer kategorisert feedback\n",
+    "\n",
+    "responses_4O = []\n",
+    "\n",
+    "for i in range(n):\n",
+    "    output_i = categorize_feedback(FeedbackData.df[\"Feedback\"][i], Categorize_search, Llm.llm)\n",
+    "    responses_4O.append({'Feedback':output_i.fb, 'Category': output_i.categories})\n",
+    "    \n",
+    "cat_df = pd.DataFrame(responses_4O)\n",
+    "print(cat_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                            Feedback Category\n",
+      "1  The step-by-step training guides for warehouse...    Other\n",
+      "2  Training sessions on inventory management soft...    Other\n",
+      "6  The HR software training felt rushed and the s...    Other\n"
+     ]
+    }
+   ],
+   "source": [
+    "others_df = cat_df[cat_df['Category']=='Other']\n",
+    "print(others_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     Category\n",
+      "0  Training and Documentation\n",
+      "1        Training and Support\n",
+      "2        Training and Support\n"
+     ]
+    }
+   ],
+   "source": [
+    "## returnerer kategorisert feedback\n",
+    "\n",
+    "responses_new_cat = []\n",
+    "\n",
+    "for i in others_df[\"Feedback\"]:\n",
+    "    output_i = categorize_feedback(i, Categorize, Llm.llm)\n",
+    "    responses_new_cat.append({'Category': output_i.cat_1})\n",
+    "\n",
+    "new_cat_df = pd.DataFrame(responses_new_cat)\n",
+    "print(new_cat_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
