mer om others sortering

--- a/notebooks/LLM101_v1.ipynb
+++ b/notebooks/LLM101_v1.ipynb
@@ -113,8 +113,8 @@
     "    file_path = \"../files/shuffled_df_LLM101_filtered.csv\"\n",
     "    df_o = pd.read_csv(file_path)\n",
     "\n",
-    "    enr_path = \"../files/output_df.csv\"\n",
-    "    df = pd.read_csv(enr_path)\n",
+    "    enr_path = \"../files/random_out.csv\"\n",
+    "    df = pd.read_csv(enr_path)#.head(20)\n",
     "\n",
     "\n",
     "# print(FeedbackData.df[\"Feedback\"][0])\n"
@@ -141,14 +141,13 @@
     "class Categorize_search(BaseModel):\n",
     "    \"\"\"Categorization of IT-questionaire feedback.\"\"\"\n",
     "\n",
-    "    fb: str = Field(description=\"Return just the feedback verbatim.\")\n",
     "    categories: Literal[\n",
-    "        \"Cyber security\",\n",
+    "        \"Network\",\n",
+    "        \"IT Training\",\n",
     "        \"IT Support\",\n",
-    "        \"IT Systems\",\n",
     "        'Other'\n",
     "    ] = Field(\n",
-    "        description=\"Categorize the feedback into the most fitting category. If the categories provided are not a perfect fit, default to 'Other'. You should always choose 'Other' if you belive there exist a category which is a better fit for the feedback than the pedetermined categories in the list.\"\n",
+    "        description=\"Categorize the feedback into the most fitting category. If the categories provided are not a perfect fit, default to 'Other'.\"\n",
     "    )\n",
     "    #if_other: str = Field(\n",
     "        #description=\"If you chose to categorize the feedback as 'Other', return an explanation as to why and what category you think would be the best fit for the feedback.\"\n",
@@ -159,7 +158,6 @@
     "    # Begrenser kategoriene modellen kan velge mellom. Den får kun lov til å putte feedbacken i en av de forhåndsbestemte kategoriene.\n",
     "    \"\"\"Categorization of IT-questionaire feedback.\"\"\"\n",
     "\n",
-    "    fb: str = Field(description=\"Return just the feedback verbatim.\")\n",
     "    categories: Literal[\n",
     "        \"Cyber security\",\n",
     "        \"IT training\",\n",
@@ -176,50 +174,17 @@
     "    )\n",
     "\n",
     "\n",
-    "class Categorize_think(BaseModel):\n",
-    "    \"\"\"Categorization of IT-questionaire feedback.\"\"\"\n",
-    "\n",
-    "    cot: str = Field(\n",
-    "        description=\"Think about and explain why this category is the most fitting one and why you chose it.\"\n",
-    "    )\n",
-    "    categories: Literal[\n",
-    "        \"Cyber secyrity\", \"IT training\", \"IT support\", \"Technology quality\"\n",
-    "    ] = Field(description=\"Categorize the feedback into the most fitting category.\")\n",
-    "\n",
     "\n",
     "class Categorize(BaseModel):\n",
     "    \"Categorization of feedback on IT-services.\"\n",
     "\n",
     "    # Thoughts: Forklar tankegangen din.\n",
-    "    fb: str = Field(description=\"Return just the feedback verbatim.\")\n",
-    "    cat_1: str = Field(description=\"The best fitting general category.\")\n",
+    "    cat_1: str = Field(description=\"The best fitting general category. Only one.\")\n",
     "    rating: Optional[int] = Field(\n",
     "        description=\"Your certainty of the corectness of the best category on a scale from 1-10\"\n",
     "    )\n",
     "\n",
-    "\n",
-    "class Enrich(BaseModel):\n",
-    "    \"Enrichment of dataset to make it more human\"\n",
-    "\n",
-    "    cat_1: str = Field(\n",
-    "        description=\"Return the enriched dataset in a comma separated format like the format of the input dataset\"\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "class Sentiment(BaseModel):\n",
-    "    \"Provide a sentiment analysis of feedback\"\n",
-    "\n",
-    "    fb: str = Field(description=\"Return just the feedback verbatim.\")\n",
-    "    sentiment: str = Field(\n",
-    "        description=\"Return the sentiment analysis of the feedback as a label. Either positive, negative or mixed.\"\n",
-    "    )\n",
-    "    depth_sent: str = Field(\n",
-    "        description=\"Return a more nuanced analysis of the sentiment. Is there more complexity to the sentiment than just positive or negative?\"\n",
-    "    )\n",
-    "\n",
-    "    feeling: str = Field(\n",
-    "        description=\"What feelings are most predominant in the sentiment of the feedback? Return just the feeling(s).\"\n",
-    "    )\n"
+    "\n"
    ]
   },
   {
@@ -235,126 +200,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def categorize_feedback(data, struktur, llm_model):\n",
+    "def categorize_feedback(feedback_txt : str, struktur, llm_model) -> dict:\n",
     "    # Prompt\n",
     "    task = f\"\"\"\n",
     "    The following feedback is from an internal survey at 'IT and Things Company' where they asked their employees for feedback on their IT-services in general.\n",
-    "    Catgorize the feedback: {data}.\n",
+    "    Catgorize the feedback: {feedback_txt}.\n",
     "    \"\"\"\n",
     "\n",
-    "    # Giving the task to LLM\n",
+    "    # Defining structured output for the model\n",
     "    structured_llm = llm_model.with_structured_output(\n",
     "        struktur, method=\"function_calling\"\n",
     "    )\n",
     "\n",
+    "    # Prompt model\n",
     "    response = structured_llm.invoke(task)\n",
-    "\n",
     "    # Return the response\n",
-    "    return response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = 10"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. Kun forhåndsbestemte kategorier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Bound categorization\n",
-    "\n",
-    "responses_3O = {}\n",
-    "responses_4O = {}\n",
-    "\n",
-    "for i in range(n):\n",
-    "    responses_3O[str(i)] = categorize_feedback(\n",
-    "        FeedbackData.df[\"Feedback\"][i], Categorize_bound, LlmRes.llm\n",
-    "    )\n",
-    "    responses_4O[str(i)] = categorize_feedback(FeedbackData.df[\"Feedback\"][i], Categorize_bound, Llm.llm)\n",
-    "    print(f\"\\n-----Feedback-----\\n {responses_3O[str(i)].fb}\\n\")\n",
-    "    print(\n",
-    "        f\"-----Category-----\\n 4O: {responses_4O[str(i)].categories}\\n 3O: {responses_3O[str(i)].categories}\\n\"\n",
-    "    )\n",
-    "    print(\n",
-    "        f\"-----Rating of certainty-----\\n 4O: {responses_4O[str(i)].rating}\\n 3O: {responses_3O[str(i)].rating}\\n\"\n",
-    "    )\n",
-    "    print(\n",
-    "        f\"-----Reason-----\\n 4O: {responses_4O[str(i)].reason}\\n 3O: {responses_3O[str(i)].reason}\\n\\n\"\n",
-    "    )\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Modellen velger fritt kategorier."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "responses_3O = {}\n",
-    "responses_4O = {}\n",
-    "\n",
-    "for i in range(n):\n",
-    "    responses_3O[str(i)] = categorize_feedback(\n",
-    "        FeedbackData.df[\"Feedback\"][i], Categorize ,LlmRes.llm\n",
-    "    )\n",
-    "    responses_4O[str(i)] = categorize_feedback(FeedbackData.df[\"Feedback\"][i], Categorize, Llm.llm)\n",
-    "    print(f\"\\n-----Feedback-----\\n {responses_3O[str(i)].fb}\\n\")\n",
-    "    print(\n",
-    "        f\"-----Category 1-----\\n 4O: {responses_4O[str(i)].cat_1}\\n 3O: {responses_3O[str(i)].cat_1}\\n\"\n",
-    "    )\n",
-    "    print(\n",
-    "        f\"-----Rating of certainty-----\\n 4O: {responses_4O[str(i)].rating}\\n 3O: {responses_3O[str(i)].rating}\\n\\n\"\n",
-    "    )\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3. Gi noen kategorier + 'other' "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "responses_3O = {}\n",
-    "responses_4O = {}\n",
-    "\n",
-    "for i in range(n):\n",
-    "    responses_3O[i] = categorize_feedback(FeedbackData.df[\"Feedback\"][i], Categorize_search, LlmRes.llm)\n",
-    "    responses_4O[i] = categorize_feedback(FeedbackData.df[\"Feedback\"][i], Categorize_search, Llm.llm)\n",
-    "    print(f\"\\n-----Feedback-----\\n {responses_3O[i].fb}\\n\")\n",
-    "    print(\n",
-    "        f\"-----Category-----\\n 4O: {responses_4O[i].categories}\\n 3O: {responses_3O[i].categories}\\n\"\n",
-    "    )\n",
-    "    print(\n",
-    "        f\"-----If other-----\\n 4O: {responses_4O[i].if_other}\\n 3O: {responses_3O[i].if_other}\\n\"\n",
-    "    )\n"
+    "    return response.__dict__"
    ]
   },
   {
@@ -368,86 +229,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                            Feedback    Category\n",
-      "0  Although the system is old and its documentati...  IT systems\n",
-      "1  The step-by-step training guides for warehouse...       Other\n",
-      "2  Training sessions on inventory management soft...       Other\n",
-      "3  The VPN connection is unreliable and slows dow...  IT systems\n",
-      "4  Whenever I need help, I receive a prompt and f...  IT Support\n",
-      "5  The email filtering system does a great job ov...  IT systems\n",
-      "6  The HR software training felt rushed and the s...       Other\n",
-      "7  The IT onboarding training was comprehensive a...  IT systems\n",
-      "8  The sales analytics platform is overly complex...  IT systems\n",
-      "9  Support has been consistently helpful with pro...  IT Support\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## returnerer kategorisert feedback\n",
     "\n",
-    "responses_4O = []\n",
+    "responses = []\n",
     "\n",
-    "for i in range(n):\n",
-    "    output_i = categorize_feedback(FeedbackData.df[\"Feedback\"][i], Categorize_search, Llm.llm)\n",
-    "    responses_4O.append({'Feedback':output_i.fb, 'Category': output_i.categories})\n",
+    "for f in FeedbackData.df[\"Feedback\"]:\n",
+    "    feedback_4O = categorize_feedback(feedback_txt = f, struktur = Categorize_search, llm_model = Llm.llm)\n",
+    "    feedback_3O = categorize_feedback(feedback_txt = f, struktur = Categorize_search, llm_model = LlmRes.llm)\n",
+    "    responses.append({'Feedback': f, 'Category_4O': feedback_4O['categories'], 'Category_3O': feedback_3O['categories']})\n",
+    "    print(responses)\n",
+    "\n",
     "    \n",
-    "cat_df = pd.DataFrame(responses_4O)\n",
+    "cat_df = pd.DataFrame(responses)\n",
     "print(cat_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                            Feedback Category\n",
-      "1  The step-by-step training guides for warehouse...    Other\n",
-      "2  Training sessions on inventory management soft...    Other\n",
-      "6  The HR software training felt rushed and the s...    Other\n"
-     ]
-    }
-   ],
-   "source": [
-    "others_df = cat_df[cat_df['Category']=='Other']\n",
-    "print(others_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                     Category\n",
-      "0  Training and Documentation\n",
-      "1        Training and Support\n",
-      "2        Training and Support\n"
-     ]
-    }
-   ],
-   "source": [
-    "## returnerer kategorisert feedback\n",
-    "\n",
-    "responses_new_cat = []\n",
-    "\n",
-    "for i in others_df[\"Feedback\"]:\n",
-    "    output_i = categorize_feedback(i, Categorize, Llm.llm)\n",
-    "    responses_new_cat.append({'Category': output_i.cat_1})\n",
-    "\n",
-    "new_cat_df = pd.DataFrame(responses_new_cat)\n",
-    "print(new_cat_df)"
    ]
   },
   {
@@ -455,7 +251,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "others_df = cat_df[(cat_df['Category'] == 'Other') | (cat_df['Category2'] == 'Other')]\n",
+    "print(others_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## returnerer kategorisert feedback\n",
+    "\n",
+    "responses_new_cat = []\n",
+    "\n",
+    "for f in others_df[\"Feedback\"]:\n",
+    "    output_i = categorize_feedback(feedback_txt = f, struktur = Categorize, llm_model = Llm.llm)\n",
+    "    responses_new_cat.append({'Feedback': f,'Category': output_i[\"cat_1\"]})\n",
+    "\n",
+    "new_cat_df = pd.DataFrame(responses_new_cat)\n",
+    "print(new_cat_df)"
+   ]
   }
  ],
  "metadata": {
