nytt datasett i notebook

--- a/notebooks/LLM101_v1.ipynb
+++ b/notebooks/LLM101_v1.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
     "    \"\"\"\n",
     "\n",
     "    # Load a DataFrame with a specific version of a CSV\n",
-    "    file_path = \"../files/shuffled_df_LLM101_filtered.csv\"\n",
+    "    file_path = \"../files/raw_data_LLM101.csv\"\n",
     "    df_o = pd.read_csv(file_path)\n",
     "\n",
     "    enr_path = \"../files/random_out.csv\"\n",
